<resources>

    <string name="app_name">Codyn</string>
    <string name="nav_header_title">加密器</string>
    <string name="base64_enc">Base64编码</string>
    <string name="base64_dec">Base64解码</string>
    <string name="AES">AES</string>
    <string name="ECC">ECC</string>
    <string name="RSA">RSA</string>
    <string name="encrypt">加密</string>
    <string name="decrypt">解密</string>
    <string name="decrypt_error">解密错误</string>
    <string name="SHA256">SHA256</string>
    <string name="AES_enc">AES加密</string>
    <string name="AES_dec">AES解密</string>
    <string name="ECC_enc">ECC加密</string>
    <string name="ECC_dec">ECC解密</string>
    <string name="RSA_enc">RSA加密</string>
    <string name="RSA_dec">RSA解密</string>
    <string name="public_key">公钥</string>
    <string name="private_key">私钥</string>
    <string name="key">密钥</string>
    <string name="encode">编码</string>
    <string name="decode">解码</string>
    <string name="unarchive">导出用户文件</string>
    <string name="file">文件</string>
    <string name="exit">退出</string>
    <string name="my_key">我的密钥</string>
    <string name="settings">设置</string>
    <string name="new_key">新密钥</string>
    <string name="add_key">添加密钥</string>
    <string name="edit_key">编辑密钥</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="version">1.0.0</string>
    <string name="author_name">Coel</string>
    <string name="setting">设置</string>
    <string name="copy_success">已复制到剪切板</string>
    <string name="function_undone">功能还在建设</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="decode_error">解码错误</string>
    <string name="author">作者</string>
    <string name="example_text">这样看来，所谓学生会退会，关键是学生会退会需要如何写。那么，一般来讲，我们都必须务必慎重的考虑考虑。那么，我们都知道，只要有意义，那么就必须慎重考虑。一般来说，每个人都不得不面对这些问题。</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="function">功能</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_password_repeat">Password must be the same</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_error">Login Error</string>
    <string name="save">保存</string>
    <string name="tap2change">按下改变类型</string>
    <string name="comment">说明</string>
    <string name="generate_key">生成密钥</string>
    <string name="register">注册</string>
    <string name="register_fail">注册失败</string>
    <string name="register_success">注册成功</string>

</resources>
